feat: demo polish and live council transcript

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # MongoDB Atlas connection string, e.g.:
-# mongodb+srv://<user>:<pass>@cluster0.xxxxx.mongodb.net/babyhandoff?retryWrites=true&w=majority
+# mongodb+srv://<user>:<pass>@cluster0.xxxxx.mongodb.net/?retryWrites=true&w=majority
+# (This app selects the database via MONGODB_DB below.)
 MONGODB_URI=
 MONGODB_DB=babyhandoff
 
