Polish BabyHandoff UI and council orchestration

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ CONTEXT_PACK_TOKEN_BUDGET=4000
 DEMO_MODE=true
 
 # Council / LLM (optional)
-COUNCIL_MODE=heuristic  # heuristic | openai
+COUNCIL_MODE=heuristic  # heuristic | openai | multi
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-5.2
+ANTHROPIC_API_KEY=
+ANTHROPIC_MODEL=claude-3-5-sonnet-latest
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-1.5-pro
