--- a/docs/env.example
+++ b/docs/env.example
@@ -29,3 +29,10 @@ COUNCIL_MODE="heuristic"
 OPENAI_API_KEY=""
 OPENAI_MODEL="gpt-5.2"
 
+# Optional: Anthropic (used when COUNCIL_MODE=multi)
+ANTHROPIC_API_KEY=""
+ANTHROPIC_MODEL="claude-3-5-sonnet-latest"
+
+# Optional: Gemini (used when COUNCIL_MODE=multi)
+GEMINI_API_KEY=""
+GEMINI_MODEL="gemini-1.5-pro"
