Improve shift UX and context pack visualization

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ CONTEXT_PACK_TOKEN_BUDGET=4000
 DEMO_MODE=true
 
 # Council / LLM (optional)
-COUNCIL_MODE=heuristic  # heuristic | openai | multi
+COUNCIL_MODE=heuristic  # heuristic | openai | anthropic | gemini | multi
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-5.2
 ANTHROPIC_API_KEY=
