--- a/docs/env.example
+++ b/docs/env.example
@@ -22,17 +22,17 @@ APP_BASE_URL="http://127.0.0.1:8000"
 # Demo mode toggles some UI + council behavior (MongoDB is still required).
 DEMO_MODE=true
 
-# Council mode: "heuristic" (no external LLM calls) or "openai"
+# Council mode: "heuristic" (no external LLM calls), "openai", "anthropic", "gemini", or "multi"
 COUNCIL_MODE="heuristic"
 
-# Optional: OpenAI (only used when COUNCIL_MODE=openai)
+# Optional: OpenAI (used when COUNCIL_MODE=openai or multi; Referee also uses OpenAI in openai/multi)
 OPENAI_API_KEY=""
 OPENAI_MODEL="gpt-5.2"
 
-# Optional: Anthropic (used when COUNCIL_MODE=multi)
+# Optional: Anthropic (used when COUNCIL_MODE=anthropic or multi)
 ANTHROPIC_API_KEY=""
 ANTHROPIC_MODEL="claude-3-5-sonnet-latest"
 
-# Optional: Gemini (used when COUNCIL_MODE=multi)
+# Optional: Gemini (used when COUNCIL_MODE=gemini or multi)
 GEMINI_API_KEY=""
 GEMINI_MODEL="gemini-1.5-pro"
